--- a/AV02 - Curvas.vcxproj
+++ b/AV02 - Curvas.vcxproj
@@ -145,7 +145,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Curves.c" />
+    <ClCompile Include="Curves.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
