--- a/AV02 - Curvas.vcxproj.filters
+++ b/AV02 - Curvas.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="main.cpp">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
-    <ClCompile Include="Curves.c">
+    <ClCompile Include="Curves.cpp">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
   </ItemGroup>
